k8s/v2/namespace.yaml
# Staging namespace
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    name: staging
