k8s/v2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zewi-ingress
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  # kubectl get ingress -n staging
  ingressClassName: nginx
  rules:
  - host: hn-zewi.ziee.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zewi-hostname
            port:
              number: 8003
